[gd_scene load_steps=13 format=2]

[ext_resource path="res://levels/Level.gd" type="Script" id=1]
[ext_resource path="res://tilemap/rocks1.tres" type="TileSet" id=2]
[ext_resource path="res://gate/gate.gd" type="Script" id=3]
[ext_resource path="res://tilemap/floor.tres" type="TileSet" id=4]
[ext_resource path="res://tilemap/walls3.tres" type="TileSet" id=5]
[ext_resource path="res://tilemap/Gate_Boss_Open_Icon.png" type="Texture" id=6]
[ext_resource path="res://tilemap/Gate_Loot_Icon.png" type="Texture" id=7]
[ext_resource path="res://tilemap/gates4.tres" type="TileSet" id=8]
[ext_resource path="res://gate/gate.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24.25, 27 )

[sub_resource type="TileSet" id=3]
0/name = "Gate_Boss_Open_Icon.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=5]
0/name = "Gate_Loot_Icon.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Level1" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ -184.0 ]
}

[node name="LevelNavigation" type="Navigation2D" parent="." groups=["LevelNavigation"]]

[node name="Floor" type="TileMap" parent="LevelNavigation"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
cell_custom_transform = Transform2D( 64, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 1610612753, 0, 131082, 0, 0, 131083, 23, 0, 131084, 23, 0, 131085, 6, 0, 131086, 6, 0, 131087, 6, 0, 131088, 6, 0, 131089, 23, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131098, 23, 0, 131099, 23, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 6, 0, 196621, 4, 0, 196622, 4, 0, 196623, 4, 0, 196624, 4, 0, 196625, 6, 0, 196626, 0, 0, 196627, 1610612753, 0, 196628, 0, 0, 196629, 0, 0, 196630, 1610612752, 0, 196631, 1610612752, 0, 196632, 0, 0, 196633, 0, 0, 196634, 23, 0, 196635, 23, 0, 262146, 0, 0, 262147, 0, 0, 262148, 1, 0, 262149, 0, 0, 262150, 2, 0, 262151, 2, 0, 262152, 2, 0, 262153, 0, 0, 262154, 23, 0, 262155, 8, 0, 262156, 4, 0, 262157, 11, 0, 262158, 11, 0, 262159, 11, 0, 262160, 11, 0, 262161, 4, 0, 262162, 1610612744, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 15, 0, 262167, 1610612752, 0, 262168, 1610612752, 0, 262169, 0, 0, 262170, 0, 0, 262171, 23, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 1, 0, 327686, 16, 0, 327687, 1610612752, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 8, 0, 327692, 13, 0, 327693, 11, 0, 327694, 11, 0, 327695, 11, 0, 327696, 11, 0, 327697, 14, 0, 327698, 1610612744, 0, 327699, 0, 0, 327700, 0, 0, 327701, 15, 0, 327702, 0, 0, 327703, 0, 0, 327704, 1610612752, 0, 327705, 0, 0, 327706, 23, 0, 327707, 0, 0, 393218, 0, 0, 393219, 1610612752, 0, 393220, 2, 0, 393221, 2, 0, 393222, 16, 0, 393223, 16, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 8, 0, 393228, 13, 0, 393229, 11, 0, 393230, 11, 0, 393231, 11, 0, 393232, 11, 0, 393233, 14, 0, 393234, 1610612744, 0, 393235, 0, 0, 393236, 0, 0, 393237, 15, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 458754, 0, 0, 458755, 1610612751, 0, 458756, 2, 0, 458757, 0, 0, 458758, 0, 0, 458759, 16, 0, 458760, 1, 0, 458761, 0, 0, 458762, 0, 0, 458763, 8, 0, 458764, 13, 0, 458765, 11, 0, 458766, 11, 0, 458767, 11, 0, 458768, 11, 0, 458769, 14, 0, 458770, 1610612744, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 1610612751, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 16, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 8, 0, 524301, 12, 0, 524302, 12, 0, 524303, 12, 0, 524304, 12, 0, 524305, 1610612744, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 1610612752, 0, 524315, 0, 0, 589826, 23, 0, 589827, 0, 0, 589828, 1610612751, 0, 589829, 1610612751, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 10, 0, 589838, 10, 0, 589839, 10, 0, 589840, 10, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 2, 0, 589848, 2, 0, 589849, 2, 0, 589850, 0, 0, 589851, 0, 0, 655362, 23, 0, 655363, 23, 0, 655364, 3, 0, 655365, 1610612751, 0, 655366, 1610612751, 0, 655367, 0, 0, 655368, 1610612752, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 2, 0, 655380, 2, 0, 655381, 2, 0, 655382, 2, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0, 655386, 0, 0, 655387, 0, 0, 720898, 6, 0, 720899, 6, 0, 720900, 6, 0, 720901, 0, 0, 720902, 0, 0, 720903, 1610612751, 0, 720904, 1610612751, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 1610612751, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 6, 0, 720922, 6, 0, 720923, 6, 0, 786434, 4, 0, 786435, 4, 0, 786436, 4, 0, 786437, 6, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 1610612753, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 1, 0, 786448, 1, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 1610612751, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 6, 0, 786457, 4, 0, 786458, 4, 0, 786459, 4, 0, 851970, 13, 0, 851971, 11, 0, 851972, 11, 0, 851973, 4, 0, 851974, 6, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 1, 0, 851985, 1, 0, 851986, 0, 0, 851987, 1610612751, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 6, 0, 851992, 4, 0, 851993, 11, 0, 851994, 11, 0, 851995, 14, 0, 917506, 13, 0, 917507, 11, 0, 917508, 11, 0, 917509, 11, 0, 917510, 4, 0, 917511, 6, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 1610612751, 0, 917519, 0, 0, 917520, 0, 0, 917521, 1, 0, 917522, 1, 0, 917523, 0, 0, 917524, 0, 0, 917525, 3, 0, 917526, 6, 0, 917527, 4, 0, 917528, 11, 0, 917529, 11, 0, 917530, 11, 0, 917531, 14, 0, 983042, 13, 0, 983043, 11, 0, 983044, 11, 0, 983045, 11, 0, 983046, 11, 0, 983047, 4, 0, 983048, 1610612744, 0, 983049, 23, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 1610612752, 0, 983059, 0, 0, 983060, 0, 0, 983061, 8, 0, 983062, 4, 0, 983063, 11, 0, 983064, 11, 0, 983065, 11, 0, 983066, 11, 0, 983067, 14, 0, 1048578, 13, 0, 1048579, 11, 0, 1048580, 11, 0, 1048581, 11, 0, 1048582, 11, 0, 1048583, 14, 0, 1048584, 1610612744, 0, 1048585, 23, 0, 1048586, 23, 0, 1048587, 1610612753, 0, 1048588, 1610612753, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 1610612753, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 8, 0, 1048598, 13, 0, 1048599, 11, 0, 1048600, 11, 0, 1048601, 11, 0, 1048602, 11, 0, 1048603, 14, 0, 1114114, 13, 0, 1114115, 12, 0, 1114116, 12, 0, 1114117, 12, 0, 1114118, 12, 0, 1114119, 14, 0, 1114120, 1610612744, 0, 1114121, 0, 0, 1114122, 23, 0, 1114123, 23, 0, 1114124, 1610612753, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 8, 0, 1114134, 13, 0, 1114135, 12, 0, 1114136, 12, 0, 1114137, 12, 0, 1114138, 12, 0, 1114139, 14, 0 )

[node name="Stones" type="TileMap" parent="LevelNavigation"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
cell_custom_transform = Transform2D( 64, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( 131083, 6, 0, 131084, 0, 0, 131089, 5, 0, 131098, 0, 0, 131099, 6, 0, 196634, 2, 0, 262154, 4, 0, 262171, 0, 0, 327706, 9, 0, 589826, 2, 0, 655362, 9, 0, 655363, 1, 0, 983049, 2, 0, 1048585, 9, 0, 1048586, 1, 0, 1114122, 2, 0, 1114123, 0, 0 )

[node name="Walls" type="TileMap" parent="LevelNavigation"]
tile_set = ExtResource( 5 )
format = 1
tile_data = PoolIntArray( 0, -1073741823, 0, 1, 2, 0, 2, 4, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 0, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 4, 0, 13, 2, 0, 14, 1, 0, 65536, -1073741822, 0, 65550, -1610612734, 0, 131072, -1073741822, 0, 131086, -1610612734, 0, 196608, -1073741824, 0, 196622, -1610612736, 0, 262144, -1073741822, 0, 262158, -1610612734, 0, 327680, -1073741822, 0, 327694, -1610612734, 0, 393216, -1073741824, 0, 393230, -1610612736, 0, 458752, -1073741822, 0, 458766, -1610612734, 0, 524288, -1073741822, 0, 524302, -1610612734, 0, 589824, 1610612737, 0, 589825, 1610612738, 0, 589826, 1610612738, 0, 589827, 1610612738, 0, 589828, 1610612738, 0, 589829, 1610612738, 0, 589830, 1610612738, 0, 589832, 1610612738, 0, 589833, 1610612738, 0, 589834, 1610612738, 0, 589835, 1610612738, 0, 589836, 1610612738, 0, 589837, 1610612738, 0, 589838, -1610612735, 0 )

[node name="Gates_closed" type="TileMap" parent="LevelNavigation"]
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 64 )
format = 1
tile_data = PoolIntArray( 7, 0, 0, 47, 0, 0, 589851, 1610612736, 0 )

[node name="Gates_open" type="TileMap" parent="LevelNavigation"]
visible = false
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 64 )
format = 1
tile_data = PoolIntArray( 7, 1, 0, 47, 1, 0 )

[node name="Gate" parent="." instance=ExtResource( 9 )]
position = Vector2( 112, 2 )

[node name="Gate_right" type="Area2D" parent="."]
position = Vector2( 742, -20 )
script = ExtResource( 3 )

[node name="GateCollision" type="CollisionShape2D" parent="Gate_right"]
position = Vector2( 58, 60 )
shape = SubResource( 4 )
disabled = true

[node name="BossOpen" type="TileMap" parent="Gate_right"]
visible = false
position = Vector2( 10, 20 )
tile_set = SubResource( 3 )
format = 1
tile_data = PoolIntArray( 0, 0, 0 )

[node name="LootOpen" type="TileMap" parent="Gate_right"]
visible = false
position = Vector2( 10, 20 )
tile_set = SubResource( 5 )
format = 1
tile_data = PoolIntArray( 0, 0, 0 )

[node name="River_collision" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="River_collision"]
position = Vector2( 6.10352e-05, 6.89545 )
scale = Vector2( 1, 0.883523 )
polygon = PoolVector2Array( 416, 112, 544, 112, 544, 144, 576, 144, 576, 256, 544, 256, 544, 288, 416, 288, 416, 256, 384, 256, 384, 144, 416, 144 )
disabled = true

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="River_collision"]
polygon = PoolVector2Array( 704, 576, 704, 496, 736, 496, 736, 464, 768, 464, 768, 432, 800, 432, 800, 400, 896, 400, 896, 576 )
disabled = true

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="River_collision"]
polygon = PoolVector2Array( 64, 400, 160, 400, 160, 432, 192, 432, 192, 464, 224, 464, 224, 496, 256, 496, 256, 576, 64, 576 )
disabled = true

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 478, 539 )

[node name="EnemySpawns" type="Node2D" parent="."]

[node name="EnemySpawn1" type="Position2D" parent="EnemySpawns"]
position = Vector2( 745, 306 )
scale = Vector2( -0.947678, -0.191671 )

[node name="EnemySpawn2" type="Position2D" parent="EnemySpawns"]
position = Vector2( 139, 126 )

[node name="EnemySpawn3" type="Position2D" parent="EnemySpawns"]
position = Vector2( 722, 147 )

[node name="EnemySpawn4" type="Position2D" parent="EnemySpawns"]
position = Vector2( 275, 251 )

[connection signal="body_entered" from="Gate" to="Gate" method="_on_Gate_body_entered"]
[connection signal="body_entered" from="Gate_right" to="Gate_right" method="_on_Gate_body_entered"]
[connection signal="body_entered" from="River_collision" to="." method="_on_River_collision_body_entered"]
[connection signal="body_exited" from="River_collision" to="." method="_on_River_collision_body_exited"]
