[gd_scene load_steps=13 format=2]

[ext_resource path="res://tilemap/walls3.tres" type="TileSet" id=1]
[ext_resource path="res://tilemap/rocks1.tres" type="TileSet" id=2]
[ext_resource path="res://tilemap/gates4.tres" type="TileSet" id=3]
[ext_resource path="res://tilemap/floor.tres" type="TileSet" id=4]
[ext_resource path="res://gate/gate.tscn" type="PackedScene" id=5]
[ext_resource path="res://levels/Level.gd" type="Script" id=6]
[ext_resource path="res://gate/gate.gd" type="Script" id=7]
[ext_resource path="res://tilemap/Gate_Boss_Open_Icon.png" type="Texture" id=8]
[ext_resource path="res://tilemap/Gate_Loot_Icon.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.25, 27 )

[sub_resource type="TileSet" id=3]
0/name = "Gate_Boss_Open_Icon.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "Gate_Loot_Icon.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Level7" type="Node2D"]
script = ExtResource( 6 )

[node name="LevelNavigation" type="Navigation2D" parent="." groups=["LevelNavigation"]]

[node name="Floor" type="TileMap" parent="LevelNavigation"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 2, 0, 131080, 0, 0, 131081, 0, 0, 131082, 1610612737, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 2, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 1610612737, 0, 131094, 2, 0, 131095, 0, 0, 131096, 3, 0, 131097, 0, 0, 131098, 0, 0, 131099, 0, 0, 196610, 6, 0, 196611, 6, 0, 196612, 6, 0, 196613, 6, 0, 196614, 6, 0, 196615, 6, 0, 196616, 6, 0, 196617, 6, 0, 196618, 6, 0, 196619, 6, 0, 196620, 6, 0, 196621, 6, 0, 196622, 6, 0, 196623, 6, 0, 196624, 6, 0, 196625, 6, 0, 196626, 6, 0, 196627, 6, 0, 196628, 6, 0, 196629, 5, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 3, 0, 196635, 0, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262155, 4, 0, 262156, 4, 0, 262157, 4, 0, 262158, 4, 0, 262159, 4, 0, 262160, 4, 0, 262161, 4, 0, 262162, 4, 0, 262163, 4, 0, 262164, 4, 0, 262165, 1610612744, 0, 262166, 0, 0, 262167, 1610612737, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 327682, 11, 0, 327683, 11, 0, 327684, 11, 0, 327685, 11, 0, 327686, 11, 0, 327687, 11, 0, 327688, 11, 0, 327689, 11, 0, 327690, 11, 0, 327691, 11, 0, 327692, 11, 0, 327693, 11, 0, 327694, 11, 0, 327695, 11, 0, 327696, 11, 0, 327697, 11, 0, 327698, 11, 0, 327699, 11, 0, 327700, 11, 0, 327701, 1610612744, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 2, 0, 327706, 0, 0, 327707, 0, 0, 393218, 12, 0, 393219, 12, 0, 393220, 12, 0, 393221, 12, 0, 393222, 12, 0, 393223, 12, 0, 393224, 12, 0, 393225, 12, 0, 393226, 12, 0, 393227, 12, 0, 393228, 12, 0, 393229, 12, 0, 393230, 12, 0, 393231, 12, 0, 393232, 12, 0, 393233, 12, 0, 393234, 12, 0, 393235, 12, 0, 393236, 12, 0, 393237, 1610612744, 0, 393238, 0, 0, 393239, 2, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 23, 0, 458754, 10, 0, 458755, 10, 0, 458756, 10, 0, 458757, 10, 0, 458758, 10, 0, 458759, 10, 0, 458760, 10, 0, 458761, 10, 0, 458762, 10, 0, 458763, 10, 0, 458764, 10, 0, 458765, 10, 0, 458766, 10, 0, 458767, 10, 0, 458768, 10, 0, 458769, 10, 0, 458770, 10, 0, 458771, 10, 0, 458772, 10, 0, 458773, 5, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 2, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 3, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 23, 0, 524314, 0, 0, 524315, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 3, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 3, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 23, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 5, 0, 655366, 6, 0, 655367, 6, 0, 655368, 6, 0, 655369, 6, 0, 655370, 6, 0, 655371, 6, 0, 655372, 6, 0, 655373, 6, 0, 655374, 6, 0, 655375, 6, 0, 655376, 6, 0, 655377, 6, 0, 655378, 6, 0, 655379, 6, 0, 655380, 6, 0, 655381, 6, 0, 655382, 6, 0, 655383, 6, 0, 655384, 6, 0, 655385, 6, 0, 655386, 6, 0, 655387, 6, 0, 720898, 2, 0, 720899, 1610612737, 0, 720900, 1610612737, 0, 720901, 9, 0, 720902, 4, 0, 720903, 4, 0, 720904, 4, 0, 720905, 4, 0, 720906, 4, 0, 720907, 4, 0, 720908, 4, 0, 720909, 4, 0, 720910, 4, 0, 720911, 4, 0, 720912, 4, 0, 720913, 4, 0, 720914, 4, 0, 720915, 4, 0, 720916, 4, 0, 720917, 4, 0, 720918, 4, 0, 720919, 4, 0, 720920, 4, 0, 720921, 4, 0, 720922, 4, 0, 720923, 4, 0, 786434, 0, 0, 786435, 3, 0, 786436, 1610612738, 0, 786437, 9, 0, 786438, 11, 0, 786439, 11, 0, 786440, 11, 0, 786441, 11, 0, 786442, 11, 0, 786443, 11, 0, 786444, 11, 0, 786445, 11, 0, 786446, 11, 0, 786447, 11, 0, 786448, 11, 0, 786449, 11, 0, 786450, 11, 0, 786451, 11, 0, 786452, 11, 0, 786453, 11, 0, 786454, 11, 0, 786455, 11, 0, 786456, 11, 0, 786457, 11, 0, 786458, 11, 0, 786459, 11, 0, 851970, 0, 0, 851971, 0, 0, 851972, 2, 0, 851973, 9, 0, 851974, 12, 0, 851975, 12, 0, 851976, 12, 0, 851977, 12, 0, 851978, 12, 0, 851979, 12, 0, 851980, 12, 0, 851981, 12, 0, 851982, 12, 0, 851983, 12, 0, 851984, 12, 0, 851985, 12, 0, 851986, 12, 0, 851987, 12, 0, 851988, 12, 0, 851989, 12, 0, 851990, 12, 0, 851991, 12, 0, 851992, 12, 0, 851993, 12, 0, 851994, 12, 0, 851995, 12, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 5, 0, 917510, 10, 0, 917511, 10, 0, 917512, 10, 0, 917513, 10, 0, 917514, 10, 0, 917515, 10, 0, 917516, 10, 0, 917517, 10, 0, 917518, 10, 0, 917519, 10, 0, 917520, 10, 0, 917521, 10, 0, 917522, 10, 0, 917523, 10, 0, 917524, 10, 0, 917525, 10, 0, 917526, 10, 0, 917527, 10, 0, 917528, 10, 0, 917529, 10, 0, 917530, 10, 0, 917531, 10, 0, 983042, 0, 0, 983043, 1610612737, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 1610612738, 0, 983055, 1610612738, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 1610612738, 0, 983061, 17, 0, 983062, 0, 0, 983063, 18, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 0, 0, 1048578, 0, 0, 1048579, 23, 0, 1048580, 1610612737, 0, 1048581, 2, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 2, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 1610612737, 0, 1048592, 1610612738, 0, 1048593, 16, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 15, 0, 1048597, 1610612737, 0, 1048598, 16, 0, 1048599, 1610612737, 0, 1048600, 16, 0, 1048601, 23, 0, 1048602, 0, 0, 1048603, 23, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 1610612737, 0, 1114125, 1610612737, 0, 1114126, 0, 0, 1114127, 15, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 16, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 17, 0, 1114135, 23, 0, 1114136, 1610612737, 0, 1114137, 18, 0, 1114138, 0, 0, 1114139, 0, 0 )

[node name="Stones" type="TileMap" parent="LevelNavigation"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 393243, 2, 0, 524313, 7, 0, 589851, 7, 0, 655384, 2, 0, 655385, 2, 0, 655386, 6, 0, 1048579, 2, 0, 1048601, 7, 0, 1048603, 2, 0, 1114135, 2, 0, 1114138, 3, 0 )

[node name="Walls" type="TileMap" parent="LevelNavigation"]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 0, -1073741823, 0, 1, 2, 0, 2, 1610612739, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 13, 2, 0, 14, 1, 0, 65536, -1073741822, 0, 65550, -1610612734, 0, 131072, -1073741822, 0, 131086, -1610612734, 0, 196608, -1073741822, 0, 196622, -1610612734, 0, 262144, -1073741822, 0, 262158, -1610612734, 0, 327680, -1073741822, 0, 327694, -1610612734, 0, 393216, -1073741822, 0, 393230, -1610612734, 0, 458752, -1073741822, 0, 458766, -1610612734, 0, 524288, -1073741822, 0, 524302, -1610612734, 0, 589824, 1610612737, 0, 589825, 1610612738, 0, 589826, 1610612738, 0, 589827, 1610612738, 0, 589828, 1610612738, 0, 589829, 1610612738, 0, 589830, 1610612738, 0, 589832, 1610612738, 0, 589833, 1610612738, 0, 589834, 1610612738, 0, 589835, 1610612738, 0, 589836, 1610612738, 0, 589837, 1610612738, 0, 589838, -1610612735, 0 )

[node name="Gates_closed" type="TileMap" parent="LevelNavigation"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 64 )
format = 1
tile_data = PoolIntArray( 7, 0, 0, 47, 0, 0, 589851, 1610612736, 0 )

[node name="Gates_open" type="TileMap" parent="LevelNavigation"]
visible = false
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 64 )
format = 1
tile_data = PoolIntArray( 7, 1, 0, 47, 1, 0 )

[node name="Gate" parent="." instance=ExtResource( 5 )]
position = Vector2( 110, 2 )

[node name="Gate_right" type="Area2D" parent="."]
position = Vector2( 742, -20 )
script = ExtResource( 7 )

[node name="GateCollision" type="CollisionShape2D" parent="Gate_right"]
position = Vector2( 58, 60 )
shape = SubResource( 1 )

[node name="BossOpen" type="TileMap" parent="Gate_right"]
visible = false
position = Vector2( 10, 20 )
tile_set = SubResource( 3 )
format = 1
tile_data = PoolIntArray( 0, 0, 0 )

[node name="LootOpen" type="TileMap" parent="Gate_right"]
visible = false
position = Vector2( 10, 20 )
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 0, 0, 0 )

[node name="River_collision" type="Area2D" parent="."]

[node name="Upper_river" type="CollisionPolygon2D" parent="River_collision"]
position = Vector2( 0, 26.25 )
scale = Vector2( 1, 0.78125 )
polygon = PoolVector2Array( 64, 144, 672, 144, 672, 224, 64, 224 )
disabled = true

[node name="Lower_river" type="CollisionPolygon2D" parent="River_collision"]
position = Vector2( -1.90735e-06, 67.1875 )
scale = Vector2( 1, 0.804688 )
polygon = PoolVector2Array( 192, 368, 192, 448, 896, 448, 896, 368 )

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 478, 539 )

[node name="EnemySpawns" type="Node2D" parent="."]

[node name="EnemySpawn1" type="Position2D" parent="EnemySpawns"]
position = Vector2( 497, 285 )

[node name="EnemySpawn2" type="Position2D" parent="EnemySpawns"]
position = Vector2( 497, 86 )

[node name="EnemySpawn3" type="Position2D" parent="EnemySpawns"]
position = Vector2( 814, 139 )

[node name="EnemySpawn4" type="Position2D" parent="EnemySpawns"]
position = Vector2( 102, 308 )

[connection signal="gates_open" from="." to="Gate" method="_on_gates_open"]
[connection signal="gates_open" from="." to="Gate_right" method="_on_gates_open"]
[connection signal="body_entered" from="Gate" to="Gate" method="_on_Gate_body_entered"]
[connection signal="body_entered" from="Gate_right" to="Gate_right" method="_on_Gate_body_entered"]
[connection signal="body_entered" from="River_collision" to="." method="_on_River_collision_body_entered"]
